--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,70 @@
-.App {
-  text-align: center;
+.app {
+  border: solid 1px #e6e6e6;
+  border-radius: 10px;
+  height: 500px;
+  background-color: rgb(53, 53, 53);
+  /* padding: 20px; */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app .home {
+  padding: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.app .home p {
+  margin-bottom: 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.app .home ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.app .home .tasks {
+  background-color: #212529;
   color: white;
+  margin-top: 10px;
+  border-radius: 5px;
+  padding: 0 5px 5px 0;
 }
 
-.App-link {
-  color: #61dafb;
+.home h1 {
+  margin: 0 0 10px 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+form.create-note {
+  position: relative;
+  width: 480px;
+  margin: 20px auto 20px auto;
+  background: #fff;
+  padding: 5px;
+  border-radius: 7px;
+  box-shadow: 0 1px 5px rgb(138, 137, 137);
+}
+
+form.create-note input,
+form.create-note textarea {
+  width: 100%;
+  border: none;
+  outline: none;
+  padding: 4px;
+  font-size: 1.2em;
+  font-family: inherit;
+  resize: none;
+}
+
+form.create-note button {
+  position: absolute;
+  right: 18px;
+  bottom: -18px;
+  background: #2ce8df;
+  color: #fff;
+  border: none;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+  outline: none;
 }
